<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_img_prod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/img_prod"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/placeholder"
                    android:scaleType="fitXY"
                    android:src="@drawable/placeholder" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_prod_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_prod"
                    android:layout_margin="2dp"
                    android:text="Activa"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_prod_locality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_prod_name"
                    android:layout_margin="2dp"
                    android:text="Activa"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_prod_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_prod_locality"
                    android:layout_margin="2dp"
                    android:text="Activa"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/img_prod_score_star"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_alignBottom="@+id/tv_prod_score"
                    android:layout_margin="2dp"
                    android:layout_toEndOf="@+id/tv_prod_score"
                    android:layout_toRightOf="@+id/tv_prod_score"
                    android:src="@drawable/star" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_prod_offer_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_prod_score"
                    android:layout_margin="2dp"
                    android:text="Activa"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/img_prod_offer_percentage"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_alignBottom="@+id/tv_prod_offer_percentage"
                    android:layout_margin="2dp"
                    android:layout_toEndOf="@+id/tv_prod_offer_percentage"
                    android:layout_toRightOf="@+id/tv_prod_offer_percentage"
                    android:src="@drawable/percentage"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_prod_offer_percetage_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_prod_score"
                    android:layout_margin="2dp"
                    android:layout_toEndOf="@+id/img_prod_offer_percentage"
                    android:layout_toRightOf="@+id/img_prod_offer_percentage"
                    android:text="@string/label_off"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:visibility="gone"
                    tools:visibility="visible" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_prod_rent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_img_prod"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="3dp">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/ll_rent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_prod_per_day_rent_amt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="perdayrent"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_prod_per_day_rent_offer_amt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="perdayrent"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:visibility="gone" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_prod_per_day_rent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="perdayrent"
                        android:textSize="12dp" />

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_prod_per_week_rent_amt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="perdayrent"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_prod_per_week_rent_offer_amt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="perdayrent"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:visibility="gone" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_prod_per_week_rent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="perdayrent"
                        android:textSize="12dp" />

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_prod_per_month_rent_amt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="perdayrent"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_prod_per_month_rent_offer_amt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="perdayrent"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:visibility="gone" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_prod_per_month_rent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="perdayrent"
                        android:textSize="12dp" />

                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_cal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_prod_rent"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="3dp">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/linearLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/prevMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/calendar_left_arrow_selector">

                    </ImageView>

                    <Button
                        android:id="@+id/currentMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="0.6"
                        android:background="@drawable/calendar_bar"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#FFFFFF">

                    </Button>

                    <ImageView
                        android:id="@+id/nextMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/calendar_right_arrow_selector">

                    </ImageView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"></LinearLayout>

                <GridView
                    android:id="@+id/calendar"
                    android:layout_width="fill_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/calendarheader"
                    android:layout_marginTop="5dp"
                    android:numColumns="7">

                </GridView>

                <ImageView
                    android:id="@+id/calendarheader"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/linearLayout1"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/blue_bg_with_text" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_prod_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_cal"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="3dp">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_prod_desc_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/label_desc"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/black" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_prod_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="Activa"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_prod_tnc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_prod_desc"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="3dp">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/ll_prod_tnc"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_prod_tnc_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/label_tnc"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/black" />

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>